--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,15 +2,10 @@
 import BaseLayout from "../layouts/BaseLayout.astro";
 import CTA from "../components/CTA.astro";
 
-import { getImage } from "astro:assets";
-
-import image from "../assets/images/landing.jpg";
-const optimizedImage = await getImage({
-  src: image,
-  format: "webp",
-  width: 500, // resize optional
-  height: 500, // resize optional
-});
+// Optimize our landing image and pass it as props to the BaseLayout (for preloading) and Landing (for rendering)
+import {getOptimizedImage} from "../js/utils"
+import landingImage from "../assets/images/landing.jpg" // The asset must be imported from src
+const optimizedImage = await getOptimizedImage(landingImage)
 ---
 
 <BaseLayout
